tests/snapshots/integration__compgen__argcomp_any.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN `prog no_option ` ************
__argc_comp:file

************ COMPGEN `prog no_arg ` ************
--fa	<file>
--oa


