tests/snapshots/integration__compgen__auto_alias_subcommand.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN `prog ` ************
cmd_a	/color:magenta
cmd-a	/color:magenta
help	/color:magenta

************ COMPGEN `prog cmd` ************
cmd_a	/color:magenta
cmd-a	/color:magenta
