tests/snapshots/integration__compgen__bash_shell.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN `prog --oa ` ************
abc:

************ COMPGEN `prog --oa abc:` ************
def:xyz 
def:tsr 
ijk:abc 
ijk:xyz 

************ COMPGEN `prog --ob /A/B` ************
 B 
B/

************ COMPGEN `prog --oc foo=` ************


************ COMPGEN `prog -` ************
--oa 
--ob 
--oc 
--fa 
--help 
-h 
--version 
-V
