tests/snapshots/integration__compgen__break_chars_bash.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN `prog a1:b` ************
b1 
b2 

************ COMPGEN `prog a1@b` ************
@b1 
@b2 

************ COMPGEN `prog a1=b` ************
b1 
b2 

************ COMPGEN `prog a1 b` ************
a1\ b1 
a1\ b2
