tests/snapshots/integration__compgen__break_chars_powershell.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN `prog abc,` ************
def	1	def		39
ghi	1	ghi		39
