tests/snapshots/integration__compgen__choice.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN `prog --oa ` ************
abc
def
ghi

************ COMPGEN `prog --oa=` ************
--oa=abc
--oa=def
--oa=ghi

************ COMPGEN `prog --oa=a` ************
--oa=abc

************ COMPGEN `prog --oa =a` ************


************ COMPGEN `prog --ob ` ************
x
y
z

************ COMPGEN `prog ` ************
--oa
--ob
x
y
z

************ COMPGEN `prog v1 ` ************
--oa
--ob
abc
def
ghi


