tests/snapshots/integration__compgen__choice_any_arg.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN `sudo cmd ` ************
ok

************ COMPGEN `sudo cmd -` ************
ok

************ COMPGEN `sudo cmd --foo` ************
ok

************ COMPGEN `sudo cmd foo` ************
ok


