tests/snapshots/integration__compgen__choice_check_vars.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN `prog argc` ************
argc__args=([0]="prog" [1]="argc")	/color:default
argc__cmd_arg_index=0	/color:default
argc__positionals=([0]="argc")	/color:default
argc_foo=argc	/color:default

************ COMPGEN `prog argc ` ************
argc__args=([0]="prog" [1]="argc" [2]="")	/color:default
argc__cmd_arg_index=0	/color:default
argc__positionals=([0]="argc" [1]="")	/color:default
argc_bar=	/color:default
argc_foo=argc	/color:default

************ COMPGEN `prog argc argc` ************
argc__args=([0]="prog" [1]="argc" [2]="argc")	/color:default
argc__cmd_arg_index=0	/color:default
argc__positionals=([0]="argc" [1]="argc")	/color:default
argc_bar=argc	/color:default
argc_foo=argc	/color:default
