tests/snapshots/integration__compgen__choice_multi.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN `prog --oa ` ************
abc	/color:default
def	/color:default
ghi	/color:default

************ COMPGEN `prog --oa=` ************
abc	/color:default
def	/color:default
ghi	/color:default
